# osi-art

./: .gitignore  Cargo.toml  README.md  SINUS.CFG  build.rs  config.rs  dac_dma.rs  flash.ps1  main.rs  memory.x  sdcard.rs  shapes.rs  waveform.rs
.cargo/: config.toml
.github/workflows/: firmware.yml
firmware/: heart.hex
src/: config.rs  dac_dma.rs  main.rs  shapes.rs  text_elsan.rs  waveform.rs
tools/: gen_text.py
